[package]
name = "nust"
version = "0.1.0"
authors = ["shmuelamit <shmuelamit@mail.tau.ac.il>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
nom = "6.2.1"
pixels = "0.5.0"
winit = "0.25.0"
winit_input_helper = "0.10.0"
rand = "0.8.4"